# plugincode

./: CHANGELOG.rst  NOTICE  README.rst  azure-pipelines.yml  configure  plugincode.ABOUT  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py
src/plugincode/: __init__.py  location_provider.py  output.py  output_filter.py  post_scan.py  pre_scan.py  scan.py
tests/: test_skeleton_codestyle.py
tests/plugincode/: test_plugincode.py
