[wheel]
universal=1

[metadata]
license_file = apache-2.0.LICENSE
name = plugincode
author = nexB. Inc. and others
author_email = info@aboutcode.org
description = plugincode is a library that provides plugin functionality for ScanCode toolkit.
long_description = file:README.rst
url = https://github.com/nexB/plugincode
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
keywords =
	plugincode
	scancode
	scancode-toolkit

[options]
package_dir=
    =src
packages=find:
include_package_data = true
zip_safe = false
install_requires =
	click
	commoncode
	pluggy
	six
setup_requires = setuptools_scm[toml] >= 4

[options.packages.find]
where=src

[options.extras_require]
testing =
	# upstream
	pytest >= 6
    pytest-xdist >= 2