[metadata]
name = plugincode
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = plugincode is a library that provides plugin functionality for ScanCode toolkit.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/plugincode

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    open source
    utilities
    plugincode
    scancode
    scancode-toolkit
    plugins
    open source
    plugin

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    click >= 6.7, !=7.0
    commoncode >= 31.0.0
    pluggy >= 0.12.0


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 6.0.0
    black


docs =
    Sphinx >= 3.3.1
    sphinx-rtd-theme >= 0.5.0
    doc8 >= 0.8.1
